# karaoke-forge

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  requirements-atlas-cu124.txt  sitecustomize.py
apps/web/static/: style.css
docs/: credits.md
docs/superpowers/plans/: 2026-05-19-karaoke-leadin-vocal-sync.md
karaoke_forge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: dev_setup.sh  e2e_live_surfer_king.py  e2e_review_diagnostics.py  run_dev.sh
tests/: test_job_lifecycle.py  test_karaoke_gen_vendor_path.py  test_review_alignment.py  test_review_contract.py  test_review_page_script.py  test_store.py  test_vocal_timing.py  test_vocal_visualizer.py
tests/scripts/: validate_review_page_script.mjs
